--- a/client/package.json
+++ b/client/package.json
@@ -11,7 +11,10 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.0"
   },
   "scripts": {
     "start": "PORT=4000 react-scripts start",
